--- a/188217_BaiTap2/188217_BaiTap2/Views/Shared/Components/ViewProduct/Default.cshtml
+++ b/188217_BaiTap2/188217_BaiTap2/Views/Shared/Components/ViewProduct/Default.cshtml
@@ -7,7 +7,7 @@
 <div class="box-product">
     <div class="item-product">
         <a class="main-contain">
-            <img class="item-img" src="@product.Product_Img8"/>
+            <img class="item-img" src="~/@product.Product_Img8"/>
             <div class="item-wrap">
                 <h3>@product.Product_Name (@product.Product_Detail chi tiết)</h3>
                 <p class="item-price-current">@product.Product_Price đ</p>
