--- a/188217_BaiTap2/188217_BaiTap2/Views/Shared/_Layout.cshtml
+++ b/188217_BaiTap2/188217_BaiTap2/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <div class="header-item">
             <section>
                 <a class="top-header" href="#">
-                    <img class="topbardesk" src="./img/TopBarDesk-1200x44-2.png"/>
+                    <img class="topbardesk" src="~/img/TopBarDesk-1200x44-2.png"/>
                 </a>
             </section>
         </div>
