--- a/188217_BaiTap2/188217_BaiTap2/Views/Shared/Components/ViewProduct/Default.cshtml
+++ b/188217_BaiTap2/188217_BaiTap2/Views/Shared/Components/ViewProduct/Default.cshtml
@@ -6,7 +6,7 @@
 
 <div class="box-product">
     <div class="item-product">
-        <a class="main-contain">
+        <a class="main-contain" href="https://localhost:44354/san-pham/id-?id=@product.ProductId">
             <img class="item-img" src="~/@product.Product_Img8"/>
             <div class="item-wrap">
                 <h3>@product.Product_Name (@product.Product_Detail chi tiết)</h3>
