--- a/188217_BaiTap2/188217_BaiTap2/Views/Home/Index.cshtml
+++ b/188217_BaiTap2/188217_BaiTap2/Views/Home/Index.cshtml
@@ -15,234 +15,32 @@
     </ul>
     <div class="detail">
         <div class="detail-left">
-            <div class="box-fotorama">
-                @*df*@
-
-                <div>
-                    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                      <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                      </div>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="10000">
-                          <img src="~/@productDetail.Product_Img8" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Ảnh 1/3</h5>
-                            
-                          </div>
-                        </div>
-                        <div class="carousel-item" data-bs-interval="2000">
-                          <img src="~/@productDetail.Product_Img3" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Ảnh 2/3</h5>
-                            
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <img src="~/@productDetail.Product_Img5" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Ảnh 3/3</h5>
-                            
-                          </div>
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                    </div>
-
-                </div>
-
-                @*sdf*@
-                @*<img class="" src="img/do-choi-phi-co-chien-dau-cua-cole-lego-ninjago-71736-070322-111209-600x600.jpg"/>*@
-            </div>
-            <div class="article">
-                <div class="article-content">
-                    <h2 class="article-content-title">THÔNG TIN SẢN PHẨM</h2>
-                    <h3>Đặc điểm nổi bật</h3>
-                    <ul>
-                        <li>• <a href="#">@productDetail.Product_Name</a> bao gồm @productDetail.Product_Detail chi tiết.</li>
-                        <li>• @productDetail.Product_Features</li>
-                        <li>• <a href="#">@productDetail.Product_Type1</a> @productDetail.Product_Features_Type</li>
-                        <li>• <a href="#">@productDetail.Product_Category</a> @productDetail.Product_Features_Category</li>
-                    </ul>
-                    <h3>Hưỡng dẫn sử dụng</h3>
-                    <ul>
-                        <li>• <a href="#">@productDetail.Product_Category </a> @productDetail.Product_Manual_Category </li>
-                        <li>• @productDetail.Product_Manual1.</li>
-                        <li>• @productDetail.Product_Manual2.</li>
-                    </ul>
-                    
-                </div>
-            </div>
+            <partial name="~/Views/Shared/Partial/ProductDetail/_Carousel.cshtml" model="productDetail"/>
+            <partial name="~/Views/Shared/Partial/ProductDetail/_Article.cshtml" model="productDetail"/>
+           
         </div>
         <div class="detail-right">
-            <div class="box-product-infor">
-                <div class="product-name">
-                    <h3>@productDetail.Product_Name (@productDetail.Product_Detail chi tiết)</h3>
-                </div>
-                <div class="detail-top">
-                    <div class="detail-price">
-                        <span class="price-current"> @productDetail.Product_Price đ</span>
-                        <span class="price-old"> @productDetail.Product_Price_Old đ</span>
-                        <span class="price-precent"> @productDetail.Product_Price_Percent%</span>
-                    </div>
-                    <span class="product-code">@productDetail.ProductId</span>
-                </div>
-                <div class="box-promo">
-                    <p class="promo-txt">Khuyễn mãi (Đến @productDetail.Product_Promotion_Date_End)</p>
-                    <ul class="box-promo-list">
-                        <li>
-                            <span>@productDetail.Product_Promotion_Content <a> (click xem chi tiết)</a></span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="box-buy ">
-                    <a class="btn-addcart btn">
-                        <p class="btn-txt">
-                            THÊM VÀO GIỎ
-                        </p>
-                    </a>
-                    <span class="btn-spmarket btn">XEM CỬA HÀNG CÒN HÀNG</span>
-                </div>
-                
-            </div>
-            <ul class="policy">
-                <li class="trade">
-                    <div class="iconl">
-                        <i class="icon-trade"></i>
-                    </div>
-                    <p>Không áp dụng đổi trả, bảo hành (Không bao gồm xe đồ chơi điều khiển) <a href="#">Xem chi tiết</a></p>
-                </li>
-                <li class="">
-                    <div class="iconl">
-                        <i class="icon-delivery"></i>
-                    </div>
-                    <p>Miễn phí giao hàng đơn từ 500.000đ trong 10km đầu tiên</p>
-                </li>
-                <li class="trade">
-                    <div class="iconl">
-                        <i class="icon-cod"></i>
-                    </div>
-                    <p>Giao hàng thu tiền, thanh toán online nhiều phương thức</p>
-                </li>
-                <li class="trade">
-                    <div class="iconl">
-                        <i class="icon-headphone"></i>
-                    </div>
-                    <p>Tổng đài: <a href="tel:1900866874"> 1900.866.874</a><br> (7h30 - 22h00)</p>
-                </li>
-            </ul>
-            <div class="infor--item">
-                <p class="infor-title">THÔNG TIN CHI TIẾT</p>
-                <div class="info-content">
-                    <ul class="info-article">
-                        <li>
-                            <p class="txt01">Thương hiệu</p>
-                            <p class="txt02">@productDetail.Product_Trademark</p>
-                        </li>
-                         <li>
-                            <p class="txt01">Loại</p>
-                            <ul  class="txt02-type">
-                                <li>• @productDetail.Product_Type</li>
-                                <li>• @productDetail.Product_Type1</li>
-                            </ul>
-                        </li>
-                         <li>
-                            <p class="txt01">Độ tuổi</p>
-                            <p class="txt02">@productDetail.Product_Age</p>
-                        </li>
-                         <li>
-                            <p class="txt01">Chất liệu</p>
-                            <p class="txt02">@productDetail.Product_Substance</p>
-                        </li>
-                         <li>
-                            <p class="txt01">Kích thước hộp</p>
-                            <p class="txt02">@productDetail.Product_BoxSize cm</p>
-                        </li>
-                         <li>
-                            <p class="txt01">Trọng lượng</p>
-                            <p class="txt02">@productDetail.Product_Weight g</p>
-                        </li>
-                         <li>
-                            <p class="txt01">Lưu ý khi sử dụng</p>
-                            <p class="txt02">@productDetail.Product_Note</p>
-                        </li>
-                         <li>
-                            <p class="txt01">Nơi sản xuất</p>
-                            <p class="txt02">@productDetail.Product_MadeIn</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <partial name="~/Views/Shared/Partial/ProductDetail/_ProductInfor.cshtml" model="productDetail"/>
+            <partial name="~/Views/Shared/Partial/ProductDetail/_Policy.cshtml" />
+            <partial name="~/Views/Shared/Partial/ProductDetail/_InforItem.cshtml" model="productDetail"/>
+           
         </div>
     </div>
    
-    
-    
+   
     
     @await Component.InvokeAsync("ViewProducts")
           
-            
-            
        
-
-
-    <div class="comment-list">
-        <b class="cmt-title">Hỏi đáp về </b>
-        <textarea class="cmt-text" name="txtContent" rows="1" maxlength="1000" required="required" placeholder="Mời bạn bình luận hoặc đặt câu hỏi"></textarea>
-    </div>
-    <div></div>
-
+    <partial name="~/Views/Shared/Partial/ProductDetail/_Comment.cshtml" />
 
 
     
 </section>
 
+<partial name="~/Views/Shared/Partial/_Commitment.cshtml"/>
 
-<div class="commitment">
-        <ul class="commitment-ul">
-            <li>
-                <div class="li-icon">
-                    <span class="icon-genuine"/>
-                </div>
-                <div class="li-content">
-                    <p><span>100% Sản Phẩm Chính Hãng</span><br/>hơn 100 thương hiệu nổi tiếng</p>
-                </div>
-            </li>
-            <li>
-                <div class="li-icon">
-                    <span class="icon-trade1"/>
-                </div>
-                <div class="li-content">
-                    <div><span>1 Đổi 1 Trong Vòng 1 Tháng</span>
-                        <span class="li-content-note">(Tùy sản phẩm)</span>
-                        <br/>Tại 29 Cửa Hàng Trên Toàn Quốc</div>
-                        <a href="#" class="txt-link">Xem chi tiết</a>
-                </div>
-                
-            </li>
-            <li>
-                <div class="li-icon">
-                    <span class="icon-deliveryfree"/>
-                </div>
-                <div class="li-content">
-                    <div><span>Miễn phí giao hàng</span><br/>Cho Đơn Từ 500.000đ Trong 10km Đầu Tiên</div>
-                    <a href="#" class="txt-link">Xem chi tiết</a>
-                </div>
-                
-            </li>
-        </ul>
 
-      
-    </div>
 
 
 
